helm-charts/jenkins/ingress-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress-ej
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.erfan-us.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
